--- a/microservices/eureka-server/Dockerfile
+++ b/microservices/eureka-server/Dockerfile
@@ -1,5 +1,4 @@
 FROM adoptopenjdk/openjdk11
 WORKDIR /
-ADD eureka-server-0.0.1-SNAPSHOT.jar eureka-server-0.0.1-SNAPSHOT.jar
-EXPOSE 5000
-CMD java -jar eureka-server-0.0.1-SNAPSHOT.jar
+ADD target/*.jar app.jar
+CMD java -jar app.jar
