Changed inside dockerfile

--- a/microservices/simple-rest-api/Dockerfile
+++ b/microservices/simple-rest-api/Dockerfile
@@ -1,5 +1,4 @@
 FROM adoptopenjdk/openjdk11
 WORKDIR /
-ADD simple-rest-api-0.0.1-SNAPSHOT.jar simple-rest-api-0.0.1-SNAPSHOT.jar
-EXPOSE 5000
-CMD java -jar simple-rest-api-0.0.1-SNAPSHOT.jar
+ADD target/*.jar app.jar
+CMD java -jar app.jar
