--- a/microservices/api-gateway-server/Dockerfile
+++ b/microservices/api-gateway-server/Dockerfile
@@ -1,5 +1,4 @@
 FROM adoptopenjdk/openjdk11
 WORKDIR /
-ADD api-gateway-server-0.0.1-SNAPSHOT.jar api-gateway-server-0.0.1-SNAPSHOT.jar
-EXPOSE 5000
-CMD java -jar api-gateway-server-0.0.1-SNAPSHOT.jar
+ADD target/*.jar app.jar
+CMD java -jar app.jar
