--- a/microservices/trainee-jpa-rest-api/Dockerfile
+++ b/microservices/trainee-jpa-rest-api/Dockerfile
@@ -1,5 +1,4 @@
 FROM adoptopenjdk/openjdk11
 WORKDIR /
-ADD trainee-jpa-rest-api-0.0.1-SNAPSHOT.jar trainee-jpa-rest-api-0.0.1-SNAPSHOT.jar
-EXPOSE 5000
-CMD java -jar trainee-jpa-rest-api-0.0.1-SNAPSHOT.jar
+ADD target/*.jar app.jar
+CMD java -jar app.jar
